--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
         "jquery-mask-plugin": "^1.14.16",
         "jquery-toast-plugin": "^1.3.2",
         "jquery-ui": "^1.14.1",
+        "jquery-validation": "^1.21.0",
         "jstree": "^3.3.17",
         "jsvectormap": "^1.6.0",
         "jszip": "^3.10.1",
